# AutoTracker

./: .gitignore  README.md
backend/: .env  README.md  docker-compose.yml
backend/api/: Makefile  README.md  config.cfg
backend/api/measures/: by_copy.csv  by_one.csv  by_values.csv  plot.html
backend/api/src/: Cargo.toml
backend/api/src/api/: Cargo.toml
backend/api/src/api/src/: main.rs  paths.rs
backend/api/src/api/src/handlers/: mod.rs  response_status_code.rs  route_get_service.rs  snap_send_service.rs  status_response.rs
backend/api/src/api/src/handlers/auth_services/: auth_service.rs  mod.rs  passport_confirm_service.rs  registration_service.rs
backend/api/src/api/src/handlers/camera_service/: camera_get_by_cords_service.rs  camera_get_by_id_service.rs  camera_response.rs  get_avg_speed_service.rs  mod.rs
backend/api/src/api/src/handlers/search_services/: mod.rs  search_requests.rs
backend/api/src/api/src/handlers/search_services/car_search_services/: mod.rs  search_by_filters.rs  search_by_fio.rs  search_by_gos_num_mask.rs  search_by_passport.rs
backend/api/src/api/src/handlers/search_services/track_info_search_services/: mod.rs  search_by_date.rs  search_by_filters.rs  search_by_fio.rs  search_by_gos_num_mask.rs  search_by_passport.rs
backend/api/src/api/tests/: auth_service_tests.rs  car_search_by_fio_service_tests.rs  car_search_by_gos_num_mask_service_tests.rs  car_search_by_passport_service_tests.rs  passport_confirm_service_tests.rs  registration_service_tests.rs  route_get_service_tests.rs  snap_send_service_tests.rs  track_info_search_by_date_service_tests.rs  track_info_search_by_fio_service_tests.rs  track_info_search_by_gos_num_mask_service_tests.rs  track_info_search_by_passport_service_tests.rs
backend/api/src/data_access/: Cargo.toml
backend/api/src/data_access/src/: error.rs  lib.rs  repositories_traits.rs
backend/api/src/data_access/src/repositories/: mocked.rs  mod.rs  redis.rs  tandem.rs
backend/api/src/data_access/src/repositories/clickhouse/: camera_repo.rs  car_repo.rs  mod.rs  snap_repo.rs  track_info_repo.rs  user_repo.rs
backend/api/src/data_access/src/repositories/postgres/: camera_repo.rs  car_repo.rs  mod.rs  snap_repo.rs  track_info_repo.rs  user_repo.rs
backend/api/src/data_access/src/repositories/redis/: mod.rs  snap_repo.rs
backend/api/src/data_access/tests/: camera_repo_tests.rs  car_repo_tests.rs  connection_test.rs  snap_repo_tests.rs  track_info_tests.rs  user_repo_tests.rs
backend/api/src/di_container/: Cargo.toml
backend/api/src/di_container/src/: lib.rs  repo_connect.rs
backend/api/src/snap_insert_mes/: Cargo.toml
backend/api/src/snap_insert_mes/src/: csv.rs  main.rs  mes.rs  plot.rs
backend/api/src/snap_insertions/: Cargo.toml
backend/api/src/snap_insertions/src/: main.rs
backend/db/camera_insertions/: Cargo.toml
backend/db/data/: cameras.csv  cars.csv  owners.csv  ptss.csv  snaps.csv  stss.csv  users.csv
backend/db/gen_data/: gened_data_files.py  main.py  requirements.txt
backend/db/loader/: main.py  requirements.txt
backend/db/sql_scripts/: constraints.sql  copy.sql  procedure.sql  tables.sql
docs/report/src/: conclusion.tex  content.tex  designations.tex  intro.tex  preamble.tex  prilozhenieA.tex  referat.tex  report.tex  sources.bib  title.tex
frontend/AutoTracker/: ApiConfig.plist  AppDelegate.swift  Config.swift  SceneDelegate.swift  ViewController.swift
frontend/AutoTracker.xcodeproj/: project.pbxproj
frontend/AutoTracker/Managers/: CodeHandler.swift  (+3 more)
misc/diograms/: bpmn.graphml  db.graphml  procedure_scheme.graphml  use-case.graphml
(+96 files in other folders)
