[package]
name = "data_access"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"

log = "0.4.27"
lazy_static = "1.4.0"

clickhouse = { version = "0.13", features = ["chrono"]}
redis = { version = "0.29.2", features = ["tokio-native-tls-comp"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }

async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

url = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

chrono = { version = "0.4", features = ["serde"] }

cfg ={ path = "./../cfg"}
models = { path = "./../models" }