[package]
name = "di_container"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
once_cell = "1.18"
lazy_static = "1.4.0"

cfg ={ path = "./../cfg"}
data_access = { path = "./../data_access"}
business_logic = { path = "./../business_logic" }
tokio = { version = "1.0", features = ["full"] }
